# April-Tag-VR-FullBody-Tracker

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  README_legacy.md  STYLE.md  WindowsBuild_Simple.md  config.yaml  symbol_test（ name）.md  symbol_test（name）.md  vcpkg.json  简体中文教程（SimplifiedChineseTutorial）.md
.github/workflows/: build.yml  cmake.yml
AprilTagTrackers/: AprilTagTrackers.cpp  AprilTagTrackers.h  AprilTagWrapper.cpp  AprilTagWrapper.h  AprilTagWrapper.hpp  CMakeLists.txt  Config.h  Config.hpp  Connection.cpp  Connection.h  Connection.hpp  Debug.cpp  Debug.h  Debug.hpp  GUI.cpp  GUI.h  GUI.hpp  GUI.rc  Helpers.cpp  Helpers.h  Helpers.hpp  ImageDrawing.cpp  ImageDrawing.hpp  Ipc.cpp  Ipc.hpp  Language.h  Language_Chinese.cpp  Language_English.h  LocaleStore.cpp  Localization.h  Localization.hpp  MessageDialog.cpp  MessageDialog.h  MyApp.cpp  MyApp.h  MyApp.hpp  ParamSerializer.cpp  ParamSerializer.h  Parameter.h  Parameters.cpp  (+31 more)
AprilTagTrackers/GUI/: FormBuilder.cpp  FormBuilder.h  FormBuilder.hpp  FormBuilder.tpp  GUI.cpp  GUI.h  MainFrame.cpp  MainFrame.h  MainFrame.hpp  MatToBitmap.cpp  MatToBitmap.hpp  PreviewPane.cpp  PreviewPane.h  PreviewPane.hpp  U8String.cpp  U8String.hpp  wxHelpers.h  wxHelpers.hpp  wxWrapper.cpp  wxWrapper.h
AprilTagTrackers/IPC/: IIPC.h  IPC.h  IPC.hpp  UNIXSocket.cpp  UNIXSocket.h  WindowsNamedPipe.cpp  WindowsNamedPipe.h
AprilTagTrackers/ceres/: bal_problem.cpp  bal_problem.hpp  bundle_adjuster.cpp  bundle_adjuster.hpp  opencv_reprojection_error.hpp  positional_error.hpp
AprilTagTrackers/config/: List.hpp  ManualCalib.hpp  TrackerUnit.hpp  Validated.hpp  VideoStream.hpp
AprilTagTrackers/debug_driver/: CMakeLists.txt  main.cpp
AprilTagTrackers/event/: EventDefs.hpp  EventQueue.hpp  MessageQueue.hpp  SpaceCalib.hpp  VideoStream.hpp
AprilTagTrackers/math/: CVHelpers.hpp  CVTypes.hpp  Constants.hpp
AprilTagTrackers/ps3eye/: PSEyeVideoCapture.cpp  PSEyeVideoCapture.h  README.md  ps3eye.cpp  ps3eye.h
AprilTagTrackers/ps3eyed/: PSEyeVideoCapture.cpp  PSEyeVideoCapture.h  ps3eye.cpp  ps3eye.h  ps3eye_capi.cpp  ps3eye_capi.h
AprilTagTrackers/resources/: apriltag.xpm  resource.rc
AprilTagTrackers/serial/: Comment.hpp  CustomSerial.cpp  CustomSerial.hpp  Deprecate.hpp  FileStorage.cpp  FileStorage.hpp  Reader.hpp  ReaderWriter.cpp  ReaderWriter.hpp  Serial.hpp  Serializable.hpp  Validator.hpp  Writer.hpp
AprilTagTrackers/test/: CMakeLists.txt  GUI_stub.cpp  main.cpp
AprilTagTrackers/tracker/: MainLoopRunner.hpp  OpenVRClient.cpp  OpenVRClient.hpp  PlayspaceCalib.hpp  TrackerUnit.hpp  VRDriver.cpp  VRDriver.hpp  VideoCapture.cpp  VideoCapture.hpp
AprilTagTrackers/utils/: Assert.hpp  Concepts.hpp  Cross.hpp  Enum.hpp  Env.cpp  Env.hpp  Error.hpp  Log.cpp  Log.hpp  LogBatch.hpp  LogFileHandler.cpp  LogFileHandler.hpp  Macros.hpp  Reflectable.hpp  SteadyTimer.hpp  StringLiteral.hpp  StrongType.hpp  Test.hpp  TypeName.hpp  Types.hpp
CMake/: automate-vcpkg.cmake  build-deps.cmake  clang-cl.cmake  clean-all.cmake  helpers.cmake  ninja-clang-cl.cmake  openvrConfig.cmake.in  platform.cmake  shared.cmake  wxWidgets.vcxproj.user.in  wxWidgetsConfig.cmake.in
Installer/: install.py  installer.py  uninstaller.py
bindings/: att_actions.json  att_bindings_empty.json  att_bindings_generic.json  att_bindings_knuckles.json  att_bindings_vive_controller.json
common/: CMakeLists.txt  SemVer.h
final/AprilTagTrackers/AprilTagTrackers.dir/Release/: AprilTagTrackers.exe.recipe  GUI.res
final/AprilTagTrackers/AprilTagTrackers.dir/Release/AprilTagTrackers.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
final/AprilTagTrackers/Release/: att_bindings_empty.json  att_bindings_knuckles.json  params.yml
final/wxWidgets/libs/html/: wxhtml_CXX_Debug_cotire.cmake.tmpc1a36
final/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
final/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
images/: calibrate-camera-bad.mkv  calibrate-camera-great.mkv  calibrate-camera-ok.mkv
libusb-compiled/VS2013/MS32/dll/: libusb-1.0.lib
libusb-compiled/VS2013/MS32/static/: libusb-1.0.lib
libusb-compiled/VS2013/MS64/dll/: libusb-1.0.lib
libusb-compiled/VS2013/MS64/static/: libusb-1.0.lib
libusb-compiled/VS2015/MS32/dll/: libusb-1.0.lib
libusb-compiled/VS2015/MS32/static/: libusb-1.0.lib
libusb-compiled/VS2015/MS64/dll/: libusb-1.0.lib
libusb-compiled/VS2015/MS64/static/: libusb-1.0.lib
libusb-compiled/VS2017/MS32/dll/: libusb-1.0.lib
libusb-compiled/VS2017/MS32/static/: libusb-1.0.lib
libusb-compiled/VS2017/MS64/dll/: libusb-1.0.lib
libusb-compiled/VS2017/MS64/static/: libusb-1.0.lib
libusb-compiled/VS2019/MS32/dll/: libusb-1.0.lib
libusb-compiled/VS2019/MS32/static/: libusb-1.0.lib
libusb-compiled/VS2019/MS64/dll/: libusb-1.0.lib
libusb-compiled/VS2019/MS64/static/: libusb-1.0.lib
locales/: en.template.yaml  en.yaml  lang_en.template.yaml  ru.yaml  zh-CN.yaml  zh-cn.yaml
scripts/: clean-all.cmake  concat-json.cmake
toolchains/: ninja-clang-cl.cmake
triplets/: x64-windows-static.cmake
utilities/: set_exposure.bat
vcpkg-ports/apriltag/: 0001-disable-build-examples.patch  0002-hide-windows-h.patch  0002-lean-windows-includes.patch  portfile.cmake  vcpkg.json
vcpkg-ports/libusb/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake
vcpkg-ports/opencv4/: portfile.cmake  vcpkg.json
vcpkg-ports/openvr/: 0001-fix-build.patch  0002-fix-includes.patch  0003-fix-lib-name.patch  portfile.cmake  vcpkg.json
